2008-02-11  Vincent Untz  <vuntz@gnome.org>

	Switch back to 24x24 icons again.
	Based on patch by Matthias Clasen <mclasen@redhat.com>
	Fix bug #487051

	* button-widget.c: (button_widget_size_allocate): handle 24x24 icons
	too
	* menu.c: (panel_make_menu_icon): scale the icon to the size only if
	it's not a bit smaller (ie, don't scale to 24 if we get 22)
	* panel-stock-icons.c: (panel_init_stock_icons_and_items): use 24x24
	for the menu bar icon
	* panel-stock-icons.h: default menu icon size is 24

2008-02-11  Vincent Untz  <vuntz@gnome.org>

	Better bonobo applets asynchronous loading.
	Patch by openSUSE people (don't know who, probably Rodrigo Moya or
	Michael Meeks).
	Fix bug #499973.

	* panel-applet-frame.c: (panel_applet_frame_load): use
	bonobo-activation instead of moniker
	(panel_applet_frame_construct_moniker): renamed to...
	(panel_applet_frame_construct_item): this, and updated
	(panel_applet_frame_activated): do lots of complex stuff I don't fully
	understand :-) But it works! I promise!

2008-02-11  Vincent Untz  <vuntz@gnome.org>

	* panel-logout.c: (panel_logout_init): center the window
	(panel_logout_new): focus the window. Patch by Matthias Clasen
	<mclasen@redhat.com>. Fix bug #514026

2008-02-11  Vincent Untz  <vuntz@gnome.org>

	Animate panel startup.
	Based on patch by William Jon McCann <mccann@jhu.edu>
	Fix bug #513756.

	* panel-toplevel.c: (get_delta): use GTimeVal
	(panel_toplevel_update_animating_position): updated for get_delta()
	change
	(panel_toplevel_realize): queue an automatic unhide
	(panel_toplevel_animation_timeout): updated
	(panel_toplevel_get_animation_time): make the time depend on the
	speed only
	(panel_toplevel_start_animation): updated for
	panel_toplevel_get_animation_time() change
	(panel_toplevel_initially_hide): new
	(panel_toplevel_init): initially make the toplevel automatically
	hidden

2008-02-11  Vincent Untz  <vuntz@gnome.org>

	* panel-menu-items.c: (panel_place_menu_item_append_local_gio): put